# marathi-inscript-typing-tutor

./: README.md  package-lock.json  package.json
public/: app.js  index.html  keyboard-data.js  lessons-data.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
