[package]
name = "marathi-inscript"
version = "1.0.0"
description = "Marathi Inscript Typing App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "marathi_inscript_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
